--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,8 +5,12 @@
 
 <body>
 
-<header th:replace="template :: header"></header>
-
+<span th:if="${session.login == null}">
+    <head th:replace="template :: header"></head>
+</span>
+<span th:if="${session.login != null}">
+    <head th:replace="template :: headerLogged"></head>
+</span>
 
 <main>
     <article class="box">
