Dodano możliwość usuwania eventów. Ostylowano formularze.

--- a/src/main/resources/templates/addevent.html
+++ b/src/main/resources/templates/addevent.html
@@ -48,7 +48,7 @@
                 <option th:value="adavanced" th:text="Zaawansowany"></option>
             </select>
         </div>
-        <input type="submit">Dodaj wydarzenie</input>
+        <input type="submit" value="Dodaj wydarzenie"/>
 
     </form>
 
