--- a/src/main/resources/templates/failure.html
+++ b/src/main/resources/templates/failure.html
@@ -7,7 +7,7 @@
 
     <header th:replace="template :: header"></header>
 
-    <h1>Porażka.</h1>
+    <h1>Coś poszło nie tak.</h1>
 
     <a th:href="@{/}">Strona główna</a>
 
