--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -114,8 +114,9 @@ ul > li:hover > ul
 
 ul > li > ul > li
 {
-    background-color: white;
-    min-height: 50px;
+    background-color: lightgrey;
+    height: auto;
+    width: auto;
     z-index: 100;
 }
 
@@ -151,6 +152,127 @@ ul > li > ul > li:hover > a
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+.login
+{
+    margin: 20px auto;
+    width: 300px;
+    padding: 30px 25px;
+    background: white;
+    border: 1px solid #c4c4c4;
+}
+
+h1.login-title
+{
+    margin: -28px -25px 25px;
+    padding: 15px 25px;
+    line-height: 30px;
+    font-size: 25px;
+    font-weight: 300;
+    color: #ADADAD;
+    text-align:center;
+    background: #f7f7f7;
+
+}
+
+.login-input
+{
+    width: 285px;
+    height: 50px;
+    margin-bottom: 25px;
+    padding-left:10px;
+    font-size: 15px;
+    background: #fff;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+}
+
+.login-input:focus
+{
+    border-color:#6e8095;
+    outline: none;
+}
+
+.login-button
+{
+    width: 100%;
+    height: 50px;
+    padding: 0;
+    font-size: 20px;
+    color: #fff;
+    text-align: center;
+    background: #6b96db;
+    border: 0;
+    border-radius: 5px;
+    cursor: pointer;
+    outline:0;
+}
+
+.login-register
+{
+    text-align:center;
+    margin-bottom:0px;
+}
+
+.login-register a
+{
+    color:#666;
+    text-decoration:none;
+    font-size:13px;
+}
+
+.createdEvent
+{
+    margin-left: 10px;
+    height: auto;
+    margin-bottom: 5px;
+    box-sizing: border-box;
+}
+
+.createdEvent:nth-child(odd)
+{
+    background-color: lightgrey;
+}
+
+.eventName
+{
+    letter-spacing: 1px;
+    width: 100%;
+    padding: 10px;
+    box-sizing: border-box;
+}
+
+.eventInfo
+{
+    padding: 10px;
+    width: 40%;
+    float: left;
+    box-sizing: border-box;
+}
+
+.eventInfo label
+{
+    font-weight: bold;
+}
+
+.eventDescription
+{
+    width: 40%;
+    float: left;
+    box-sizing: border-box;
+}
+
+.clear
+{
+    clear: both;
+}
+
+.deleteEvent
+{
+    background-color: #91acd8;
+    margin-left: 10px;
+    margin-bottom: 5px;
 }
 
 
