Możliwość dołączania do eventów. Dodano tabelę ze współrzędnymi.

--- a/src/main/resources/templates/addevent.html
+++ b/src/main/resources/templates/addevent.html
@@ -43,9 +43,9 @@
         </div>
         <div>
             <select th:field="*{advancement}">
-                <option th:value="begginer" th:text="Początkujący"></option>
+                <option th:value="beginner" th:text="Początkujący"></option>
                 <option th:value="intermediate" th:text="Sredni"></option>
-                <option th:value="adavanced" th:text="Zaawansowany"></option>
+                <option th:value="advanced" th:text="Zaawansowany"></option>
             </select>
         </div>
         <input type="submit" value="Dodaj wydarzenie"/>
