--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,21 +1,42 @@
 <!DOCTYPE html>
+
+
 <html xmlns:th="http://www.thymeleaf.org" lang="pl-PL">
 
-<head th:replace="template :: head"></head>
+<head th:replace="template :: head">
+    <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.css" />
+
+
+</head>
 
 <body>
 
-    <header th:replace="template :: header"></header>
+<header th:replace="template :: header"></header>
 
-    <form class="login" action="/login" method="post">
-        <h1 class="login-title">Logowanie</h1>
-        <input type="text" class="login-input" name="login" placeholder="login" autofocus=""/>
-        <input type="password" class="login-input" name="password" placeholder="hasło"/>
-        <input type="submit" value="Zaloguj" class="login-button"/>
-        <p class="login-register"><a th:href="@{/registration}">Nie masz konta?<br/>Zarejestruj się</a></p>
-    </form>
+<form class="login" action="/login" method="post">
+    <h1 class="login-title">Logowanie</h1>
+    <input type="text" class="login-input" name="login" placeholder="login" autofocus=""/>
+    <input type="password" class="login-input" name="password" placeholder="hasło"/>
+    <input type="submit" value="Zaloguj" class="login-button"/>
+    <p class="login-register"><a th:href="@{/registration}">Nie masz konta?<br/>Zarejestruj się</a></p>
+</form>
 
-    <footer th:replace="template :: footer"></footer>
+
+<div id="mapid"></div>
+<script src="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.js"></script>
+
+<script>
+
+    var mymap = L.map('mapid').setView([51.505, -0.09], 13);
+
+    L.tileLayer('http://{s}.tile.osm.org/{z}/{x}/{y}.png', {
+        attribution: '&copy; <a href="http://osm.org/copyright">OpenStreetMap</a> contributors'
+    }).addTo(mymap);
+
+
+</script>
+
+<footer th:replace="template :: footer"></footer>
 
 </body>
 </html>
