--- a/src/main/resources/templates/template.html
+++ b/src/main/resources/templates/template.html
@@ -12,6 +12,7 @@
     <meta name="viewpoint" content="width=device-width, initial-scale=1.0"/>
 
     <link th:href="@{/css/style.css}" rel="stylesheet"/>
+    <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.css" />
 
 </head>
 
