Dodano mapę i text fieldy pobierające koordynaty z mapy + zmieniono strukturę event.

--- a/src/main/resources/templates/addevent.html
+++ b/src/main/resources/templates/addevent.html
@@ -26,8 +26,8 @@
         </div>
         <div >
             <label>Miejsce</label>
-            <input type="text" id = "latitude" th:field="*{place}"/>
-            <input type="text" id = "longitude" th:field="*{place}"/>
+            <input type="text" id = "latitude" th:field="*{longitude}"/>
+            <input type="text" id = "longitude" th:field="*{latitude}"/>
         </div>
         <div>
             <label>Maksymalna liczba uczestników</label>
