--- a/src/main/resources/templates/template.html
+++ b/src/main/resources/templates/template.html
@@ -27,20 +27,19 @@
         <ul class="topmenu">
             <li><a th:href="@{/}">Strona główna</a></li>
             <li><a th:href="@{/search}">Szukaj</a></li>
-            <li th:if="${session.login == null}">
+            <li th:if="${session.user == null}">
                 <a th:href="@{/login}">Zaloguj się</a>
             </li>
-            <li th:if="${session.login != null}">
+            <li th:if="${session.user != null}">
                 Konto
                 <ul>
                     <li><a th:href="@{/addevent}">Utwórz wydarzenie</a></li>
                     <li><a th:href="@{/participate}">Moje wydarzenia</a></li>
                     <li><a th:href="@{/created}">Stworzone wydarzenia</a></li>
-                    <li><a th:href="@{/changePass}">Zmień hasło</a></li>
+                    <li><a th:href="@{/changePassword}">Zmień hasło</a></li>
                     <li><a th:href="@{/logout}">Wyloguj się</a></li>
                 </ul>
             </li>
-            <li><a th:href="@{/help}">Pomoc</a></li>
         </ul>
     </nav>
 
@@ -48,7 +47,7 @@
 
 
 <footer th:fragment="footer">
-    Move up! &copy; 2018
+    Move up! &copy; 2019
 </footer>
 
 </html>
